2005-11-07  Lars Clausen  <lars@raeder.dk>

	* objects/UML/class.c
	* objects/UML/class.h
	* objects/UML/class_dialog.c: Patch from dklotzbach@foxvalley.net
	(dave Klotzbach): Make UML comments conform to UML 1.0 standard
	and allow multi-line comments. Ugly as hell, but standard.  Time
	for a 'Strict UML' option?  Fixes bug #303744.
	
	* objects/UML/state.c: Patch from Peter Allin <peter@peca.dk>: Add
	entry, exit and do descriptions to a state object.  Fixes bug #65434.

2005-11-03  Lars Clausen  <lars@raeder.dk>

	* lib/arrows.c:
	* lib/attributes.c:
	* lib/autoroute.c:
	* lib/bezier_conn.c:
	* lib/boundingbox.c:
	* lib/color.c:
	* lib/connection.c:
	* lib/connectionpoint.c:
	* lib/dia_dirs.c:
	* lib/dia_image.c:
	* lib/dia_svg.c:
	* lib/dia_xml.c:
	* lib/diaarrowchooser.c:
	* lib/diaerror.c:
	* lib/diagdkrenderer.c:
	* lib/diagramdata.c:
	* lib/element.c:
	* lib/object.c:
	* lib/object.h:
	* lib/parent.c:
	Added documentation java-doc style.  Also a few trivial cleanups.
	
2005-10-13  Lars Clausen  <lars@raeder.dk>

	* lib/connectionpoint.h (DIR_ALL): Parentheses around operations
	in macros.

	* plug-ins/hpgl/hpgl.c (export_data): Correct error message.

	* lib/Makefile.am:
	* lib/debug.[ch]:
	* lib/object.[ch]: 
	* objects/UML/class.[ch]: 
	* objects/UML/uml.h: 
	* objects/UML/umlattribute.c: 
	* objects/UML/umloperation.c: 
	* objects/UML/class_dialog.c: 
	Rework of the UML class attribute/operation handling.  Now doesn't
	copy connection points into the dialog data, but only the "flat"
	data.  As part of debugging made sanity check functionality.
	Currently still dies when deleting an attribute/operation that has
	a connection to it.

2005-10-09  Hans Breuer  <hans@breuer.org>

	* lib/properties.h : prefer american spelling of colo(u)r for
	user visible strings - i.e. to be translated ones.
	* objects/UML/uml.c : it is Implementation. Together fixes bug #313929
                                        ^
	* po/*.po : updated (by 'make distcheck')
