@@ -49,7 +49,7 @@ object_state_change_apply_revert(ObjectStateChange *change, DiaObject *obj)
 static void
 object_state_change_free(ObjectStateChange *change)
 {
-  if (change->saved_state->free)
+  if ((change) && (change->saved_state) && (change->saved_state->free))
     (*change->saved_state->free)(change->saved_state);
   g_free(change->saved_state);
 }
